fix remove borders, fixed grid row fr value to avoid y axis overflow

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ h3 {
     );
   grid-template-rows:
     minmax(50px, 0.45fr) minmax(100px, 1.1fr) minmax(40px, 2fr)
-    minmax(40px, 2.25fr) minmax(15px, 0.2fr);
+    minmax(40px, 2.25fr) minmax(15px, 0.8fr);
   grid-column-gap: 0px;
   grid-row-gap: 10px;
 }
@@ -52,7 +52,7 @@ h3 {
   grid-area: 2 / 2 / 5 / 3;
   width: 90%;
   height: fit-content;
-  border: 0.1px solid rgb(114, 133, 114);
+  /* border: 0.1px solid rgb(114, 133, 114); */
   border-radius: 15px;
   margin: 15% 0 20% 10%;
   box-shadow: 2px 3px 15px -8px rgba(0, 0, 0, 0.89);
@@ -61,7 +61,7 @@ h3 {
   grid-area: 2 / 3 / 3 / 7;
   width: auto;
   height: auto;
-  border: 0.1px solid rgb(114, 133, 114);
+  /* border: 0.1px solid rgb(114, 133, 114); */
   box-shadow: 2px 3px 15px -8px rgba(0, 0, 0, 0.89);
   border-radius: 15px;
   margin: 3.7% 5% 0 3%;
@@ -91,7 +91,7 @@ h3 {
   height: fit-content;
   min-height: 94.5%;
   margin: 0.5% 5% 8% 3%;
-  border: 0.1px solid rgb(114, 133, 114);
+  /* border: 0.1px solid rgb(114, 133, 114); */
   box-shadow: 2px 3px 15px -8px rgba(0, 0, 0, 0.89);
   border-radius: 15px;
   overflow: hidden;
